http://www.springframework.org

Changes in version 1.0 RC2 (29.5.2006)
------------------------------------
Package org.springframework.webflow
* Removed 'requiredType' not null check on AttributeMap accessor methods;
  if no requiredType is specified the type assert is simply not performed.
* Fixed bug in Flow.end where outputMapper source and target arguments were backwards.

Package org.springframework.webflow.action
* Made FormAction.formObjectScope default ScopeType.FLOW instead of ScopeType.REQUEST.
* Improved FormAction debug logging.
* Removed FormAction.bindOnSetupForm flag for simplicity--if you need to perform a bind operation before
  entering a view state simply invoke the 'bind' action method from your flow definition.
* Removed FormAction.validateOnBinding flag for simplicity--if you need to dynamically calculate if 
  validation should occur after binding on 'bindAndValidate' override validationEnabled(RequestContext).
* Removed 'exposeFormObject' action method from FormAction; use 'setupForm' instead.
 
Package org.springframework.webflow.builder
* Fixed bug related to inline-flow parsing where inline flow artifacts were not assembled properly.
* Added not null asserts to setters allowing overriding of required flow builder services.
* Improved DTD documentation describing input-mapper and output-mapper element usage.
* Relaxed 'isMultiAction' assert in XmlFlowBuilder to simply 'isAction', allowing provision of the 'method'
  annotated action attribute with any target Action implementation, not just MultiActions.
* Removed 'isMultiAction' tester on FlowServiceLocator as it is no longer needed by the builders.
* Renamed 'resultName' and 'resultScope' <action/> element attributes to 'result-name' and 
  'result-scope', respectively, for consistency with other attribute and element names.

Package org.springframework.webflow.action
* Moved MultiAction.METHOD_ATTRIBUTE constant to AnnotatedAction.METHOD_ATTRIBUTE.
  